# JimmyBSC

./: .env  .gitignore  Cargo.toml  README.md  names.json
fourmeme/: Cargo.toml
fourmeme/src/: abi.rs  addresses.rs  lib.rs  price.rs  trade.rs
pancakes/: Cargo.toml
pancakes/src/: lib.rs
pancakes/src/pancake/: addresses.rs  mod.rs
pancakes/src/pancake/pancake_swap/: addresses.rs  mod.rs  path.rs  router.rs
pancakes/src/pancake/pancake_swap_v2/: addresses.rs  mod.rs  path.rs  router.rs
pancakes/src/plug/: mod.rs  price.rs  v2.rs  v3.rs
src/: constants.rs  lib.rs  main.rs  router.rs
src/app/: auto_trade.rs  cfg_bindings.rs  handler.rs  mod.rs  pair_state.rs  pair_streams.rs  results.rs
src/libs/: cache.rs  config.rs  lookup.rs  mod.rs  price.rs  sim.rs  writing.rs
src/libs/bsc/: client.rs  mod.rs  spells.rs
src/libs/tui/: box.rs  button.rs  input.rs  list.rs  main_window.rs  mod.rs  modal.rs  status.rs  tabs.rs  theme.rs  title.rs  toggle.rs
src/libs/tui/config_modals/: advanced.rs  amount.rs  dexes.rs  enabled.rs  main.rs  mod.rs  types.rs
src/libs/ws/: mod.rs  pairs.rs  swap_aggregator.rs  swaps.rs
src/routy/: mod.rs  swap.rs  v2.rs  v3.rs  wbnb.rs
