[package]
name = "jimmyb"
version = "0.1.0"
edition = "2021"

[dependencies]
pancakes = { path = "./pancakes" }
fourmeme = { path = "./fourmeme" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2"
dotenv = "0.15"
chrono = "0.4"
alloy = { version = "1.0.41", features = ["full"] }
ratatui = "0.29"
tui-framework-experiment = "0.4.0"
crossterm = { version = "0.27", features = ["event-stream"] }
thiserror = "1"
bytes = "1"
hex-literal = "0.4"
hex = "0.4"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
dashmap = "5"


[features]
default = [ ]
ws = [ ]
pancake = []
