[package]
name = "pancakes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2"
dotenv = "0.15"
chrono = "0.4"
alloy = { version = "1.0.41", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
thiserror = "1"
bytes = "1"
hex-literal = "0.4"
hex = "0.4"
